ProfileCombo now has type safety. Applications start correctly.